# pop-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
changelog.d/: +0f04b31f.fix.md  +77a3b697.misc.md  +7e1dc222.feature.md  +8644de71.feature.md  +af6c6b0e.fix.md  +bbe45315.fix.md  +c514857d.feature.md  +ce74bf2a.fix.md  +d624c494.feature.md  +dbafdb8b.fix.md  +ef9be1dd.feature.md  +fc9dd2d1.feature.md
src/pop_cli/: __init__.py  _version.py
