# -------------------------
# Build system configuration
# -------------------------
[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

# -------------------------
# Project metadata
# -------------------------
[project]
name = "pop-cli"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Ian Effendi", email = "effendiian@gmail.com" }]
dependencies = []

[project.scripts]
pop-cli = "pop_cli:main"

# -------------------------
# Optional dependencies
# -------------------------
[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "release" },
]
test = [
    "pytest>=9.0.2",
    "coverage>=7.13.4",
]
lint = [
    "ruff>=0.15.2",
    "mypy>=1.19.1",
]
release = [
    "setuptools-scm>=9.2.2",
    "towncrier>=25.8.0",
    "twine>=6.2.0",
]

# -------------------------
# setuptools
# -------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------
# setuptools-scm
# -------------------------
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
tag_regex = "^(?P<version>\\d+\\.\\d+\\.\\d+)$"
write_to = "src/pop_cli/_version.py"

# -------------------------
# Ruff (lint + format)
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = ["src/pop_cli/_version.py"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  "I",  # isort
  "N",  # pep8-naming
  "C4", # flake8-comprehensions
  "SIM",# flake8-simplify
]
ignore = [
  "E501", # handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------------
# mypy
# -------------------------
[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
show_error_codes = true
mypy_path = "src"

# -------------------------
# pytest
# -------------------------
[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]

# -------------------------
# Towncrier
# -------------------------
[tool.towncrier]
package = "pop_cli"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/effendiian/pop-cli/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
